[package]
name = "slack-cron"
version = "0.1.0"
authors = ["Florian Hermouet-Joscht <hello@florianhj.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slack_api = "0.21.0"
openweather = "0.0.1"
json = "0.11.14"
serde_derive = "1.0.102"
reqwest = "0.9.22"
time = "0.1.42"
url = "2.1.0"
serde = "1.0.102"
serde_json = "1.0.41"